--- a/project.json
+++ b/project.json
@@ -94,16 +94,16 @@
             "meta_keywords": "ed tech, e-learning, online learning, education platform, online courses, student management, responsive design, html5, css3, bootstrap",
             "meta_image": "..\/assets\/images\/logos\/hudson.png",
             "snippets": [
-                "headers\/harmony.php",
-                "about\/adolf.php",
-                "features\/foreman.php",
-                "about\/agadu.php",
-                "features\/single.php",
-                "about\/agar.php",
+                "headers\/holly.php",
+                "about\/apeli.php",
+                "features\/freya.php",
+                "about\/agun.php",
+                "features\/sammy.php",
+                "about\/apo.php",
                 "testimonials\/tanvi.php",
-                "counters\/cade.php",
+                "counters\/cash.php",
                 "banner\/basu.php",
-                "footers\/fanul.php"
+                "footers\/fabia.php"
             ]
         }
     },
